feat: 页签右键菜单支持从视图中移除并补全单元测试
- 页签已在当前视图中时，右键菜单显示"从视图中移除"而非"加入当前视图"
- 新增 REMOVE_FROM_VIEW action，行为参考视图选择器的移除逻辑
- 重构 TabContextMenuBuilder 提取纯静态 buildMenuItems 方法以便测试
- 修复 List.copyOf 不支持 null 分隔符的问题（改为 Collections.unmodifiableList）
- 新增 PersonalDatabaseScreenTabContextMenuItemTest（record 构造测试）
- 新增 PersonalDatabaseScreenTabContextMenuBuilderTest（条件组合、分隔线、尺寸计算测试）
- 补充中英文 tab_context.remove_from_view 翻译

Co-Authored-By: kimi-for-coding <noreply@anthropic.com>